<resources>
    <string name="appTheme">Theme</string>
    <string name="fontSize">Font Size</string>
    <string name="typeface">Font Style</string>
    <string name="fullscreenSum">Hide Status Bar</string>
    <string name="fullscreen_off">Show Status Bar</string>
    <string name="fullscreenTitle">Full Screen</string>
    <string name="gestures_off">Switch tab by Icons</string>
    <string name="gestures_sum">Switch tab by Swap</string>
    <string name="using_gestures">Gestures</string>
    <string name="interface_scr_sum">Interface Setting</string>
    <string name="interface_screen">Display Settings</string>
    <string name="soundSum">Sound and Music</string>
    <string name="soundTitle">Sound</string>
    <string name="dialog_color_picker">Choose Color</string>
    <string name="textColor">Text Color</string>
    <string name="backColor">Background Color</string>
    <string name="linkColor">Link Color</string>
    <string name="opt_show_acts_hot_keys">Show Hotkey for Actions</string>
    <string name="opt_highlight_acts">Enforced Actions</string>
    <string name="optdesc_highlight_acts">Show Actions with Selected Color</string>
    <string name="actsColor">Action Color</string>
    <string name="opt_back_action">Back Button as 1st action</string>
    <string name="opt_big_image">Stretch Image to Screen Width</string>
    <string name="opt_image_density">Image Fit to Screen</string>
    <string name="optdesc_back_action">Back Button executes the first available action</string>
    <string name="optdesc_big_image">Stretch image to the full width, but not more than maximum height</string>
    <string name="optdesc_image_density">Stretch the image depending on the screen density</string>
    <string name="gamesdirTitle">Path to game files</string>
    <string name="gamesdirSum">Directory where game files are stored</string>
    <string name="langTitle">Language</string>
    <string name="errorTitle">Error</string>
    <string name="menu_gamestock">Game Stock</string>
    <string name="menu_options">Settings</string>
    <string name="menu_about">About Quest Player</string>
    <string name="menu_newgame">Restart Game</string>
    <string name="menu_resumegame">Resume Game</string>
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_deletegames">Delete Game</string>
    <string name="menu_openfile">Open Game File</string>
    <string name="menu_closeapp">Close QuestPlayer</string>
    <string name="tab_all">All</string>
    <string name="tab_downloaded">Local</string>
    <string name="tab_starred">Market</string>
    <string name="app_name">Quest Player</string>
    <string name="gamelistLoadError">The game list could not be loaded. Check your internet connection.</string>
    <string name="playGameCmd">Play</string>
    <string name="dlGameCmd">Download</string>
    <string name="gameLoadNetError">The game could not be loaded. Check your internet connection.</string>
    <string name="cacheCreateError">Cannot create cache folder.</string>
    <string name="dlWaiting">Downloading...</string>
    <string name="dlGameError">Error while trying to download file</string>
    <string name="genGameLoadError">Error loading game</string>
    <string name="gameDlSuccess">Game downloaded</string>
    <string name="unpackMsg">Unpacked...</string>
    <string name="decompMsg">Decompress</string>
    <string name="unzipMsgShort">unzip</string>
    <string name="gameInfoFileCreateError">Creating game info file failed.</string>
    <string name="gameInfoFileWriteError">Writing to game info file failed.</string>
    <string name="noCardAccess">No access to the flash card.</string>
    <string name="gameInfoFileReadError">Reading game info file failed.</string>
    <string name="parseGameInfoUnkError">Exception occurred while trying to parse game info, unknown error.</string>
    <string name="gamelistLoadWait">Loading a list of games</string>
    <string name="gamelistLoadExcept">Exception occurred while trying to load game list.</string>
    <string name="gameFileSelect">Select a game file</string>
    <string name="gameFileDeleteTitle">Delete game</string>
    <string name="gameFileDeleteSuccess">The game has been deleted.</string>
    <string name="scaleImgHelp1">Now you can scale the image. To close the window, click again on this button.</string>
    <string name="scaleImgHelp2">Click the magnifying glass in the upper-right corner to examine the image closer.</string>
    <string name="inputBoxUIMsg">InputBox(UI): OK clicked, unparking library thread.</string>
    <string name="SDCardNotConnected">"SD card is not connected: Quest Player cannot start. Connect the SD card and restart Quest Player.</string>
    <string name="pauseGameMsg">onPause: pausing game</string>
    <string name="appCloseByUser">App closed by user! Going to background.</string>
    <string name="selectSlotTitle">Select a slot</string>
    <string name="marketNotFound">Market Intent not found.</string>
    <string name="LSF_fileNotFound">LoadSlot: failed, file not found.</string>
    <string name="openFileFail">Could not open file.</string>
    <string name="accessFileFail">Could not access file.</string>
    <string name="fileHandleReleaseFail">Could not release the file handler.</string>
    <string name="LSF_libRun">LoadSlot: failed, library is already running.</string>
    <string name="LSF_dataBuff">LoadSlot: failed, cannot load data from byte buffer.</string>
    <string name="SSF_libRun">SaveSlot: failed, library is already running.</string>
    <string name="SSF_noCreate">SaveSlot: failed, cannot create save data.</string>
    <string name="invTitle">Inventory</string>
    <string name="mainDescTitle">Description</string>
    <string name="varDescTitle">Character</string>
    <string name="stopGame">stopping game</string>
    <string name="fileNotFound">File not found.</string>
    <string name="libRunError">library thread is already running</string>
    <string name="readFileError">Could not read file.</string>
    <string name="noBrowser">Could not find browser.</string>
    <string name="gameAuthorText">Author: -AUTHOR-</string>
    <string name="cantDlGameError">Could not download game -GAMENAME-.</string>
    <string name="cantUnzipGameError">Unable to unzip the game -GAMENAME-.</string>
    <string name="gameUploadSuccess">Game -GAMENAME- successfully uploaded.</string>
    <string name="unzipMsg">Unzipping -FILENAME-</string>
    <string name="parseGameInfoXMLError">Exception occurred while trying to parse game info, XML corrupted at line -LINENUM- column -COLNUM-.</string>
    <string name="pathNotFound">Could not find path: -PATHNAME-</string>
    <string name="gameFileDeleteQuery">Delete game -GAMENAME-?</string>
    <string name="urlNotComp">URL -URLTEXT- is not UTF-8 compatible.</string>
    <string name="loadingURL"><center>Loading...</center></string>
    <string name="resetAll">Reset to default text colors and style?</string>
    <string name="resetAllSum">Exit menu to complete reset</string>
    <string name="imgHeightTitle">Maximum Image Height</string>
    <string name="imgHeightSum">Shrink images to specific height</string>
    <string name="closeGameCmd">Close</string>
    <string name="langSummary">Exit menu to apply new language</string>
    <string name="loadingPageTitle">Display Loading Page</string>
    <string name="loadingPageSumm">Choose whether to show \"Loading...\" before each page loads</string>
    <string name="storTypeTitle">Use External SD Card</string>
    <string name="storTypeSumOn">Using: External SD Card</string>
    <string name="storTypeSumOff">Using: Internal Storage</string>
    <string name="setcat_img">Image Settings</string>
    <string name="setcat_txt">Text Settings</string>
    <string name="selectDirTitle">Select Game Directory</string>
    <string name="selectDir">[CLICK TO SELECT: \"-DIRNAME-\"]</string>
    <string name="app_descrip"><![CDATA[<h2><center>About Quest Player<img src=\"file:///android_res/drawable/landscape.jpg\" width=\"100%\"></center></h2>
<h4>Quest Player is an open-source Android port of <b>Quest Soft Player</b> (<a href=\"http://qsp.su/?option=com_content&view=article&id=64\">Russian site</a>), a menu-based platform for creating interactive fiction. The most recent version can be downloaded at MrBoboFace\'s <a href=\"https://github.com/MrBoboFace/QuestPlayer\">GitHub</a>.</h4>
<h3><center>Installing Games for Quest Player:</center></h3>
<ol>
    <li>Create a folder named \"QSP\" (or something similar) on your Android\'s internal storage or external SD card</li>
    <li>To install a game, create a unique folder in the QSP folder (i.e., QSP/game1)</li>
    <li>Next, move all files associated with that game into the new game folder</li>
    <li>Repeat for each game (i.e., QSP/game2, QSP/game3, etc.)</li>
    <li>Use Settings to point Quest Player to your primary game folder</li>
    <li>The \"Local\" tab in Game Stock should show all your loaded games</li>
</ol>]]></string>
    <string name="app_credits"><![CDATA[<center><h3>Credits</h3></center>
<ul>
    <li><b>Coding:</b>
    <ul style="list-style-type:none">
        <li>Nex (~v1.0.201)</li>
        <li>BOOMik (v1.3)</li>
        <li>MrBoboFace (v1.4+)</li>
    </ul>
    <li><b>Translations:</b></li>
    <ul style="list-style-type:none">
        <li>Illume (English~v1.3/Simplified Chinese/Traditional Chinese)</li>
        <li>Unregistred (Russian)</li>
    </ul>
    <li><b>Special Thanks:</b> Kevin Smarts and all those in <a href=\"https://tfgamessite.com/\">TFGamesSite Community</a></li>
    <li><i>The Fifth World</i> painting by Noah Bradley (Creative Commons License; image scaled and cropped)</li>
</ul>]]></string>
    <string name="useVidTitle">Use video instead?</string>
    <string name="useVidSumm">Replaces images with video file (akl.jpg -> akl.*)</string>
    <string name="hideImgTitle">Hide game graphics</string>
    <string name="hideImgSumm">Replaces game graphics with neutral scene</string>
    <string name="spaceWarn">**WARNING!** Space detected in game path! Please rename game folder and remove spaces!\n</string>
    <string name="themeSumm">Choose color scheme</string>
    <string name="colorSumm">Press new color to apply</string>
    <string name="rotateTitle">Auto-Clear</string>
    <string name="rotateSumm">Optional: may clear empty space that occurs on some devices</string>
    <string name="cheatTitle">Debugging Option</string>
    <string name="cheatSumm">Enter code to activate debugging option</string>
    <string name="cheatDesc">DEBUG: Input command</string>
    <string name="SDpathNotFound">No suitable path found: using ROOT directory</string>
    <string name="selDownDirTitle">Select downloads directory</string>
    <string name="intCard">Internal SD Card: </string>
    <string name="extCard">External SD Card: </string>
    <string name="DDWarnMsg">NO GAME DIRECTORY FOUND!</string>
    <string name="DDWarnDesc">\"-SELECTDIRTITLE-\" in Settings. When selecting a directory, first use the menus to \"-SHOWSDCARD-\" and then choose your SD Card.\n\nThis application will not operate properly until this task is complete.</string>
    <string name="ShowSDCard">Show SD Card</string>
    <string name="about_template"><![CDATA[<html><head><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"><style type="text/css">body{margin: 0; padding: 0; color: QSPTEXTCOLOR; background-color: QSPBACKCOLOR; max-width: 100%; font-size: QSPFONTSIZE; font-family: QSPFONTSTYLE; } a{color: QSPLINKCOLOR; } a:link{color: QSPLINKCOLOR; } table{font-size: QSPFONTSIZE; font-family: QSPFONTSTYLE; }</style></head><body>REPLACETEXT</body></html>]]></string>
    <string name="defaultLang">en</string>
    <string name="market_details_url">market://details?id=com.qsp.player</string>
    <string name="translator">illume</string>
</resources>